these libraries are optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,8 +252,8 @@ else()
     message(STATUS "")
     message(STATUS "----------------------------------------------------------------------------------")
     message(STATUS " ${PROJECT_NAME} ${KIPIPLUGINS_VERSION_STRING} will not be compiled")
-    PRINT_LIBRARY_STATUS("libkio"    "https://projects.kde.org/projects/frameworks/kio"                 "(version >= ${KF5_MIN_VERSION})"    KF5KIO_FOUND)
-    PRINT_LIBRARY_STATUS("libkipi"   "https://projects.kde.org/projects/kde/kdegraphics/libs/libkipi"   "(version >= ${KIPI_MIN_VERSION}))"  KF5Kipi_FOUND)
+    PRINT_OPTIONAL_LIBRARY_STATUS("libkio"    "https://projects.kde.org/projects/frameworks/kio"                 "(version >= ${KF5_MIN_VERSION})"   "Kipi-plugins needs this library to be compiled." KF5KIO_FOUND)
+    PRINT_OPTIONAL_LIBRARY_STATUS("libkipi"   "https://projects.kde.org/projects/kde/kdegraphics/libs/libkipi"   "(version >= ${KIPI_MIN_VERSION}))" "Kipi-plugins needs this library to be compiled." KF5Kipi_FOUND)
     message(STATUS "")
 
 endif()
