--- a/googleservices/CMakeLists.txt
+++ b/googleservices/CMakeLists.txt
@@ -9,7 +9,7 @@ subdirs(icons)
 add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_googleservices\")
 
 if (KF5IconThemes_FOUND)
-    add_definitions("HAVE_KICONTHEMES")
+    add_definitions("-DHAVE_KICONTHEMES")
 endif()
 
 set(kipiplugin_googleservices_PART_SRCS
