--- a/flickr/CMakeLists.txt
+++ b/flickr/CMakeLists.txt
@@ -26,11 +26,11 @@ add_library(kipiplugin_flickr MODULE ${kipiplugin_flickr_PART_SRCS})
 
 target_link_libraries(kipiplugin_flickr
                       PRIVATE
+                      Qt5::Network
+
                       KF5kipiplugins
                       KF5::Kipi
                       KF5::I18n
-                      KF5::KIOCore
-                      KF5::KIOWidgets
                       KF5::WindowSystem
                      )
 
