--- a/googleservices/icons/CMakeLists.txt
+++ b/googleservices/icons/CMakeLists.txt
@@ -1,6 +1,6 @@
 #
-# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
-# Copyright (c) 2015, Alexander Potashev, <aspotashev@gmail.com>
+# Copyright (c) 2010-2016, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2015,      Alexander Potashev, <aspotashev@gmail.com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
@@ -11,11 +11,10 @@ ecm_install_icons(
         22-apps-kipi-googledrive.png
         32-apps-kipi-googledrive.png
         48-apps-kipi-googledrive.png
-        16-apps-kipi-picasa.png
-        22-apps-kipi-picasa.png
-        32-apps-kipi-picasa.png
-        48-apps-kipi-picasa.png
-        sc-apps-kipi-picasa.svgz
-        22-apps-kipi-process-working.png
+        16-apps-kipi-googlephoto.png
+        22-apps-kipi-googlephoto.png
+        32-apps-kipi-googlephoto.png
+        48-apps-kipi-googlephoto.png
+        sc-apps-kipi-googlephoto.svgz
     DESTINATION ${ICON_INSTALL_DIR}
 )
