--- a/googleservices/kipiplugin_googleservicesui.rc
+++ b/googleservices/kipiplugin_googleservicesui.rc
@@ -1,6 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
-<gui version="1" name="kipiplugin_googleservices" >
+<gui version="2" name="kipiplugin_googleservices" >
 
     <MenuBar>
 
@@ -9,11 +9,11 @@
         </Menu>
 
         <Menu name="Import"><text>&amp;Import</text>
-            <Action name="picasawebimport" group="kipi_import_group" />
+            <Action name="googlephotoimport" group="kipi_import_group" />
         </Menu>
 
         <Menu name="Export"><text>&amp;Export</text>
-            <Action name="picasawebexport" group="kipi_export_group" />
+            <Action name="googlephotoexport" group="kipi_export_group" />
         </Menu>
 
     </MenuBar>
