drop KIO from Facebook export tool

--- a/facebook/CMakeLists.txt
+++ b/facebook/CMakeLists.txt
@@ -21,11 +21,11 @@ add_library(kipiplugin_facebook MODULE ${kipiplugin_facebook_PART_SRCS})
 
 target_link_libraries(kipiplugin_facebook
                       PRIVATE
+                      Qt5::Network
+
                       KF5kipiplugins
                       KF5::Kipi
                       KF5::I18n
-                      KF5::KIOCore
-                      KF5::KIOWidgets
                       KF5::WindowSystem
                      )
 
