--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,6 +232,7 @@ if(KF5Kipi_FOUND)
         add_subdirectory(sendimages)
         add_subdirectory(flickr)
         add_subdirectory(dropbox)
+        add_subdirectory(facebook)
 
         if(KF5Archive_FOUND)
             add_subdirectory(flashexport)
@@ -258,7 +259,6 @@ if(KF5Kipi_FOUND)
 
             if(KF5KIOWidgets_FOUND)
 
-                add_subdirectory(facebook)         # fbtalker.cpp
                 add_subdirectory(piwigo)           # piwigotalker.cpp
                 add_subdirectory(rajce)            # rajcesession.cpp
                 add_subdirectory(smug)             # smugtalker.cpp
