--- a/imgur/CMakeLists.txt
+++ b/imgur/CMakeLists.txt
@@ -31,8 +31,9 @@ endif()
 add_library(kipiplugin_imgur MODULE ${kipiplugin_imgur_PART_SRCS})
 
 target_link_libraries(kipiplugin_imgur
+                      Qt5::Network
+
                       KF5::Kipi
-                      KF5::KIOCore
                       KF5::WindowSystem
                       KF5::I18n
 
