--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,6 +234,7 @@ if(KF5Kipi_FOUND)
         add_subdirectory(dropbox)
         add_subdirectory(facebook)
         add_subdirectory(imgur)
+        add_subdirectory(piwigo)
 
         if(KF5Archive_FOUND)
             add_subdirectory(flashexport)
@@ -259,7 +260,6 @@ if(KF5Kipi_FOUND)
 
             if(KF5KIOWidgets_FOUND)
 
-                add_subdirectory(piwigo)           # piwigotalker.cpp
                 add_subdirectory(rajce)            # rajcesession.cpp
                 add_subdirectory(smug)             # smugtalker.cpp
                 add_subdirectory(remotestorage)    # kioimportwindow.cpp, kioexportwindow.cpp
