--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -235,6 +235,7 @@ if(KF5Kipi_FOUND)
         add_subdirectory(facebook)
         add_subdirectory(imgur)
         add_subdirectory(piwigo)
+        add_subdirectory(rajce)
 
         if(KF5Archive_FOUND)
             add_subdirectory(flashexport)
@@ -259,7 +260,6 @@ if(KF5Kipi_FOUND)
 
             if(KF5KIOWidgets_FOUND)
 
-                add_subdirectory(rajce)            # rajcesession.cpp
                 add_subdirectory(smug)             # smugtalker.cpp
                 add_subdirectory(remotestorage)    # kioimportwindow.cpp, kioexportwindow.cpp
                 add_subdirectory(googleservices)   # autorize.cpp, gptalker.cpp, replacedialog.cpp, gdtalker.cpp, gswindow.cpp
