--- a/googleservices/CMakeLists.txt
+++ b/googleservices/CMakeLists.txt
@@ -29,6 +29,8 @@ add_library(kipiplugin_googleservices MODULE ${kipiplugin_googleservices_PART_SR
 
 target_link_libraries(kipiplugin_googleservices
                       PRIVATE
+                      Qt5::Network
+
                       KF5::Kipi
                       KF5::I18n
                       KF5::KIOCore
