--- a/common/libkipiplugins/CMakeLists.txt
+++ b/common/libkipiplugins/CMakeLists.txt
@@ -31,7 +31,43 @@ set(kipiplugins_LIB_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/tools/kipiplugins_debug.cpp
                          ${libkipipluginsresources_SRCS}
 )
 
-add_library(KF5kipiplugins SHARED ${kipiplugins_LIB_SRCS})
+# The o2 library does not adhere to the flags we use
+remove_definitions(
+    -DQT_NO_CAST_FROM_ASCII
+    -DQT_NO_CAST_TO_ASCII
+    -DQT_NO_URL_CAST_FROM_STRING
+    -DQT_NO_CAST_FROM_BYTEARRAY)
+# It also does not export symbols, so export all by default
+unset(CMAKE_CXX_VISIBILITY_PRESET)
+
+# Copied from o2/src/CMakeLists.txt
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(o2_SRCS
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2reply.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2replyserver.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2requestor.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2simplecrypt.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o0settingsstore.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o0baseauth.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o0abstractstore.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o0globals.h
+    # Enable when needed
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1requestor.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1timedreply.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1twitter.h
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/oxtwitter.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1dropbox.h
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2gft.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2facebook.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2skydrive.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o1flickr.h
+    #${CMAKE_CURRENT_SOURCE_DIR}/o2/src/o2hubic.cpp
+)
+
+add_library(KF5kipiplugins SHARED ${kipiplugins_LIB_SRCS} ${o2_SRCS})
 add_dependencies(KF5kipiplugins kipiplugins-gitversion)
 
 generate_export_header(KF5kipiplugins BASE_NAME kipiplugins EXPORT_MACRO_NAME KIPIPLUGINS_EXPORT)
@@ -40,6 +76,7 @@ target_link_libraries(KF5kipiplugins
 
                       PUBLIC
                       Qt5::Gui
+                      Qt5::Network
 
                       PRIVATE
 
