--- a/sendimages/CMakeLists.txt
+++ b/sendimages/CMakeLists.txt
@@ -19,8 +19,9 @@ add_library(kipiplugin_sendimages MODULE ${kipiplugin_sendimages_PART_SRCS})
 target_link_libraries(kipiplugin_sendimages
                       PRIVATE
 
+		      Qt5::Gui
+
                       KF5::I18n
-                      KF5::Service
                       KF5::Kipi
 
                       KF5kipiplugins
