--- a/flashexport/kipiplugin_flashexport.desktop.cmake.in
+++ b/flashexport/kipiplugin_flashexport.desktop.cmake.in
@@ -97,4 +97,4 @@ ServiceTypes=KIPI/Plugin
 X-KDE-Library=kipiplugin_flashexport
 X-KIPI-PluginCategories=Export
 X-KIPI-BinaryVersion=${KIPI_LIB_SO_CUR_VERSION}
-author=Gilles Caulier, caulier dot gilles at gmail dot com
+author=Veaceslav Munteanu, slavuttici at gmail dot com
