--- a/kmlexport/kipiplugin_kmlexport.desktop.cmake.in
+++ b/kmlexport/kipiplugin_kmlexport.desktop.cmake.in
@@ -60,4 +60,4 @@ X-KDE-Library=kipiplugin_kmlexport
 X-KIPI-ReqFeatures=ImagesHasTime
 X-KIPI-PluginCategories=Export
 X-KIPI-BinaryVersion=${KIPI_LIB_SO_CUR_VERSION}
-author=Gilles Caulier, caulier dot gilles at gmail dot com
+author=Stéphane Pontier, shadow dot walker at free dot fr
