apply patch #103171 and #103476 from Andrew Goodbody to porting JAlbum to Qt5 and polish CCBUGS: 316719

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -252,6 +252,7 @@ if(KF5Kipi_FOUND)
         add_subdirectory(imageshack)
         add_subdirectory(yandexfotki)
         add_subdirectory(googleservices)
+        add_subdirectory(jalbum)
 
         if(KF5Archive_FOUND)
             add_subdirectory(flashexport)
