--- a/jalbum/kipiplugin_jalbumui.rc
+++ b/jalbum/kipiplugin_jalbumui.rc
@@ -1,11 +1,11 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
-<gui version="1" name="kipiplugin_jalbumexport" >
+<gui version="1" name="kipiplugin_jalbum" >
 
     <MenuBar>
 
         <Menu name="Export"><text>&amp;Export</text>
-            <Action name="jalbumexport" group="kipi_export_group" />
+            <Action name="jalbum" group="kipi_export_group" />
         </Menu>
 
     </MenuBar>
